[gd_scene load_steps=3 format=3 uid="uid://u8oj86u1pdy"]

[ext_resource type="Script" uid="uid://ccbp3lpulvuxy" path="res://global/saves_manager/gui/scripts/SaveSlot.gd" id="1_tx7ke"]

[sub_resource type="Gradient" id="Gradient_8r5wo"]
offsets = PackedFloat32Array(0, 0.626667, 1)
colors = PackedColorArray(0.0552041, 0.624832, 1, 1, 0.810893, 0.151419, 0.524356, 1, 0, 0.492609, 0.801382, 1)

[node name="SaveSlot" type="Panel"]
process_mode = 3
custom_minimum_size = Vector2(320, 72)
offset_right = 373.0
offset_bottom = 72.0
size_flags_horizontal = 3
script = ExtResource("1_tx7ke")

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(-40.0251, 11.9155)
scale = Vector2(1.25, 1.07)
points = PackedVector2Array(34, -10, 347, -10, 347, 55, 34, 55)
closed = true
width = 3.0
default_color = Color(0.320058, 0.651489, 0.728137, 1)
gradient = SubResource("Gradient_8r5wo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SaveName" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 19
text = "SAVE_FILE_NAME
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Line2D2" type="Line2D" parent="VBoxContainer/HBoxContainer"]
position = Vector2(191, 2)
scale = Vector2(3.49007, 1.06131)
points = PackedVector2Array(0, 0, -1.52588e-05, 63.5603)
closed = true
width = 1.0
default_color = Color(0.251624, 0.275985, 0.278132, 1)

[node name="SaveDate" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 14
text = "SAVE_FILE_DATE
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
